--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -1,161 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - Techium</title>
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
-    <style>
-        /* Optional: Add any additional styles here */
-        header {
-            background-color: #f0f0f0;
-            padding: 10px;
-        }
-        header img {
-            width: 160px;
-            height: 40px;
-        }
-        footer img {
-            width: 160px;
-            height: 40px;
-            display: block;
-            margin: 10px auto; /* Centers the image horizontally */
-        }
-        .works img, .about img, .latest-news img, .testimonials img {
-            display: block;
-            margin: 0 auto 20px;
-        }
-        .testimonials img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-        }
-    </style>
-</head>
-<body>
-    <!-- Header -->
-    <header>
-        <div>
-            <!-- Replace span with image -->
-            <div><a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40"></a></div>
-            <nav>
-                <a href="/">Home</a>
-                <a href="#services">Services</a>
-                <a href="#works">Works</a>
-                <a href="#about">About</a>
-                <a href="#latest_news">Latest news</a>
-                <a href="#testimonials">Testimonials</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Main content -->
-    <main>
-        <!-- Works Section -->
-        <section class="works" id="works">
-            <header>
-                <h2>Works</h2>
-            </header>
-            <div>
-                <img src="images/pic-work-01.jpg" alt="empty">
-                <h3>Project 1</h3>
-                <p>Description of project 1.</p>
-            </div>
-            <div>
-                <img src="images/pic-work-02.jpg" alt="empty">
-                <h3>Project 2</h3>
-                <p>Description of project 2.</p>
-            </div>
-            <div>
-                <img src="images/pic-work-03.jpg" alt="empty">
-                <h3>Project 3</h3>
-                <p>Description of project 3.</p>
-            </div>
-        </section>
-
-        <!-- About Us Section -->
-        <section class="about" id="about">
-            <header>
-                <h2>About Us</h2>
-            </header>
-            <div>
-                <img src="images/pic-about-us.jpg" alt="empty" width="460" height="447">
-                <h3>Our Story</h3>
-                <p>Description about the company.</p>
-            </div>
-        </section>
-
-        <!-- Latest News Section -->
-        <section class="latest-news" id="latest_news">
-            <header>
-                <h2>Latest news</h2>
-            </header>
-            <article>
-                <div>
-                    <img src="images/pic-blog-01.jpg" alt="empty" width="305" height="205">
-                </div>
-                <p>First news content.</p>
-                <small>By Kelly D.</small>
-            </article>
-            <article>
-                <div>
-                    <img src="images/pic-blog-02.jpg" alt="empty" width="305" height="205">
-                </div>
-                <p>Second news content.</p>
-                <small>By William A.</small>
-            </article>
-            <article>
-                <div>
-                    <img src="images/pic-blog-03.jpg" alt="empty" width="305" height="205">
-                </div>
-                <p>Third news content.</p>
-                <small>By Frances J.</small>
-            </article>
-        </section>
-
-        <!-- Testimonials Section -->
-        <section class="testimonials" id="testimonials">
-            <header>
-                <h2>Testimonials</h2>
-            </header>
-            <article>
-                <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar">
-                <blockquote>
-                    <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
-                    <cite>Yuri Y.</cite>
-                </blockquote>
-            </article>
-            <article>
-                <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar">
-                <blockquote>
-                    <p>Thank you so much for your help. Techium company is awesome!</p>
-                    <cite>Dorrie S.</cite>
-                </blockquote>
-            </article>
-            <article>
-                <img src="images/pic-person-03.jpg" alt="Sven H. avatar">
-                <blockquote>
-                    <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
-                    <cite>Sven H.</cite>
-                </blockquote>
-            </article>
-        </section>
-
-        <!-- Other sections as per 31-index.html -->
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <div>
-            <!-- Insert logo image -->
-            <img src="logo-black.png" alt="Techium logo" width="160" height="40">
-            <address>234 Washington Street<br>Urbana, Illinois</address>
-            <hr>
-            <p>© 2020 Techium, made with ♥ by students at Holberton School</p>
-        </div>
-    </footer>
-</body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+		<title>Homepage - Techium</title>
+		<meta name="description" content="Techium is a digital agency">
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/png" href="./favicon.png">
+	</head>
+	<body>
+		<header></header>
+		<main>
+			<section>
+				<header><h2>Headings</h2></header>
+				<h1>Heading level 1</h1>
+				<h2>Heading level 2</h2>
+				<h3>Heading level 3</h3>
+				<h4>Heading level 4</h4>
+				<h5>Heading level 5</h5>
+				<h6>Heading level 6</h6>
+			</section>
+			<section>
+				<header><h2>Paragraph</h2></header>
+				<h2>Heading with a subtitle</h2>
+				<p>This is my subtitle</p>
+				<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+			</section>
+			<!-- Lists -->
+			<section>
+				<header>
+					<h2>Lists</h2>
+				</header>
+				<div>
+					<h3>Unordered</h3>
+					<ul>
+						<li>Dolor pulvinar etiam magna etiam.</li>
+						<li>Sagittis adipiscing lorem eleifend.</li>
+						<li>Felis enim feugiat dolore viverra.</li>
+					</ul>
+					<h3>Ordered</h3>
+					<ol>
+						<li>Dolor pulvinar etiam magna etiam.</li>
+						<li>Sagittis adipiscing lorem eleifend.</li>
+						<li>Felis enim feugiat dolore viverra.</li>
+					</ol>
+					<h3>Definition</h3>
+					<dl>
+						<dt>Term: Definition List title</dt>
+						<dd>Definition text.</dd>
+						<dt>Startup</dt>
+						<dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+						<dt>Water</dt>
+						<dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+					</dl>
+				</div>
+			</section>
+			<!-- Horizontal rule -->
+			<section>
+				<header>
+					<h2>Horizontal rule</h2>
+				</header>
+				<div>
+					<hr>
+				</div>
+			</section>
+			<!-- Blockquotes -->
+			<section>
+				<header>
+					<h2>Blockquotes</h2>
+				</header>
+				<div>
+					<h3>Inline quote</h3>
+					<q>Stay hungry. Stay foolish.</q>
+				</div>
+				<div>
+					<h3>Blockquote</h3>
+					<blockquote>
+						<p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
+						<cite>Kanye West, Musician</cite>
+					</blockquote>
+				</div>
+			</section>
+			<!-- Typography -->
+			<section>
+				<header><h2>Typography</h2></header>
+				<div>
+					<address>320 Stewart Avenue, Unit 12<br>New York City NY 10001</address>
+				</div>
+				<div>
+					<pre>
+						<code>
+							<h2>My title</h2>
+							<p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+						</code>
+					</pre>
+				</div>
+				<div>
+					<p>
+						Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
+					</p>
+				</div>
+			</section>
+			<!-- Table -->
+			<section>
+				<header><h2>Table</h2></header>
+				<table>
+					<caption>Star Wars Trilogy Data</caption>
+					<thead>
+						<tr>
+							<th scope="col">Title</th>
+							<th scope="col">Director</th>
+							<th scope="col">Release Date</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">Star Wars: Episode IV - A New Hope</th>
+							<td>George Lucas</td>
+							<td>May 25th, 1977</td>
+						</tr>
+						<tr>
+							<th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+							<td>Irvin Kershner</td>
+							<td>May 21st, 1980</td>
+						</tr>
+						<tr>
+							<th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+							<td>Richard Marquand</td>
+							<td>May 25th, 1983</td>
+						</tr>
+					  </tbody>
+				</table>
+			</section>
+			<!-- Details -->
+			<section>
+				<header><h2>Details</h2></header>
+				<div>
+					<h3>Default</h3>
+					<details>
+						<summary>Show/Hide me</summary>
+						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+					</details>
+				</div>
+				<div>
+					<h3>Open</h3>
+					<details open>
+						<summary>Always open</summary>
+						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+					</details>
+				</div>
+			</section>
+			<!-- Video -->
+			<section>
+				<header><h2>Video</h2></header>
+				<video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
+					<source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
+					Sorry, your browser doesn't support HTML5 video.
+				</video>
+			</section>
+		</main>
+		<footer></footer>
+	</body>
 </html>
