--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -47,33 +47,24 @@
     </style>
 </head>
 <body>
-
-    <div>
-        <header>
+    <header>
+        <div>
             <span>Techium</span>
-            <nav><!-- Nav content --></nav>
-        </header>
-    </div>
+            <nav></nav>
+        </div>
+    </header>
 
     <main>
-        <div>
-            <h1>Homepage</h1>
-        </div>
+        <h1>Homepage</h1>
 
-        <div>
-            <section>
-                <header>
-                    <h2>We help you build your brand!</h2>
-                    <p>Main content</p>
-                </header>
-                <div>
-                    <!-- Rest of the content -->
-                </div>
-            </section>
-        </div>
+        <section>
+            <div>
+                <h2>We help you build your brand!</h2>
+            </div>
+        </section>
 
-        <div>
-            <section>
+        <section>
+            <div>
                 <header>
                     <h2>Services</h2>
                     <p>We work with you</p>
@@ -86,11 +77,11 @@
                     <h3>Web Development</h3>
                     <h3>Social Media</h3>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div>
-            <section>
+        <section>
+            <div>
                 <header>
                     <h2>Works</h2>
                     <p>Take a look in our portfolio</p>
@@ -100,25 +91,28 @@
                     <article><h3>Web Development</h3></article>
                     <article><h3>Personal Brand</h3></article>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div>
-            <section>
+        <section>
+            <div>
                 <header>
                     <h2>About Us</h2>
                     <p>Everything about us</p>
                 </header>
                 <div>
                     <h3>Who are we</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     <h3>Our culture</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     <h3>How we work</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div>
-            <section>
+        <section>
+            <div>
                 <header>
                     <h2>Latest news</h2>
                 </header>
@@ -139,11 +133,11 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                     </article>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div>
-            <section>
+        <section>
+            <div>
                 <header>
                     <h2>Testimonials</h2>
                     <p>We are more than a digital company</p>
@@ -153,28 +147,25 @@
                     <article>Testimonial 2</article>
                     <article>Testimonial 3</article>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div>
-            <section>
+        <section>
+            <div>
                 <header>
                     <h2>Contact</h2>
                     <p>We like to know new people</p>
                 </header>
-                <div>
-                    <!-- Contact content -->
-                </div>
-            </section>
-        </div>
+                <div></div>
+            </div>
+        </section>
 
     </main>
 
-    <div>
-        <footer>
+    <footer>
+        <div>
             Footer
-        </footer>
-    </div>
-
+        </div>
+    </footer>
 </body>
 </html>
