--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -1,189 +1,127 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+		<title>Homepage - Techium</title>
+		<meta name="description" content="Techium is a digital agency">
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/png" href="./favicon.png">
+	</head>
+	<body>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Homepage - Techium</title>
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
-    <style>
-        /* Your CSS styles can go here */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
+        <!-- Header -->
+		<header>
+			<div>
+				<span>Techium</span>
+				<nav></nav>
+			</div>
+		</header>
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+        <!-- Main -->
+		<main>
+			<h1>Homepage</h1>
 
-        nav {
-            /* Your nav styles */
-        }
+            <!-- Hero section -->
+			<section>
+				<div>
+					<h2>We help you build your brand!</h2>
+				</div>
+			</section>
 
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        h1,
-        h2,
-        h3 {
-            color: #333;
-        }
-
-        p {
-            margin-bottom: 10px;
-        }
-    </style>
-</head>
-
-<body>
-
-    <!-- Header to help with scanning your code -->
-    <br><!-- Header -->
-    <header>
-        <span>Techium</span>
-        <nav><!-- Nav content --></nav>
-    </header>
-
-    <!-- Main to help with scanning your code -->
-    <br><!-- Main -->
-    <main>
-
-        <!-- Hero section -->
-        <br><!-- Hero section -->
-        <div>
-            <section>
-                <h2>We help you build your brand!</h2>
-                <div>
-                    <!-- Rest of the content -->
-                </div>
-            </section>
-        </div>
-
-        <!-- Services section -->
-        <br><!-- Services section -->
-        <div>
-            <section>
-                <h2>Services</h2>
-                <p>We work with you</p>
-                <div>
+            <!-- Services section -->
+			<section>
+				<div>
+                    <header>
+                        <h2>Services</h2>
+                        <p>We work with you</p>
+                    </header>
+				<div>
                     <h3>Design & Concept</h3>
-                    <h3>Digital Strategy</h3>
-                    <h3>Content Strategy</h3>
-                    <h3>UX Design</h3>
-                    <h3>Web Development</h3>
-                    <h3>Social Media</h3>
+					<h3>Digital Strategy</h3>
+					<h3>Content Strategy</h3>
+					<h3>UX Design</h3>
+					<h3>Web Development</h3>
+					<h3>Social Media</h3>
                 </div>
-            </section>
-        </div>
+				</div>
+			</section>
 
-        <!-- Works section -->
-        <br><!-- Works section -->
-        <div>
-            <section>
-                <h2>Works</h2>
-                <p>Take a look in our portfolio</p>
-                <div>
-                    <article><h3>Interior Design</h3></article>
-                    <article><h3>Web Development</h3></article>
-                    <article><h3>Personal Brand</h3></article>
-                </div>
-            </section>
-        </div>
+            <!-- Works section -->
+			<section>
+				<div>
+                    <header>
+                    <h2>Works</h2>
+					<p>Take a look in our portfolio</p>
+                    </header>
 
-        <!-- About Us section -->
-        <br><!-- About Us section -->
-        <div>
-            <section>
-                <h2>About Us</h2>
-                <p>Everything about us</p>
-                <div>
-                    <h3>Who are we</h3>
-                    <h3>Our culture</h3>
-                    <h3>How we work</h3>
-                </div>
-            </section>
-        </div>
+                    <div>
+                        <article><h3>Interior Design</h3></article>
+                        <article><h3>Web Development</h3></article>
+                        <article><h3>Personal Brand</h3></article>
+                    </div>
+				</div>
+			</section>
 
-        <!-- Latest news section -->
-        <br><!-- Latest news section -->
-        <div>
-            <section>
-                <h2>Latest news</h2>
-                <div>
-                    <article>
-                        <p>Career</p>
-                        <h3>Hoc loco tenere se Triarius non potuit.</h3>
+            <!-- About Us section -->
+			<section>
+				<div>
+                    <header>
+                    <h2>About Us</h2>
+					<p>Everything about us</p>
+                    </header>
+					<div>
+                        <h3>Who are we</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                        <h3>Our culture</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                        <h3>How we work</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+                    </div>
+				</div>
+			</section>
+
+            <!-- Latest news section -->
+			<section>
+				<div>
+                    <header>
+                        <h2>Latest news</h2>
+                    </header>
+					<div>
+                        <article><p>Career</p><h3>Hoc loco tenere se Triarius non potuit.</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p></article>
+                        <article><p>Digital Life</p><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p></article>
+                        <article><p>Social</p><h3>Bestiarum vero nullum iudicium puto.</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p></article>
+                    </div>
+				</div>
+			</section>
+
+            <!-- Testimonials section -->
+			<section>
+				<div>
+                    <header>
+                        <h2>Testimonials</h2>
+					    <p>We are more than a digital company</p>
+                    </header>
+					<div>
+                        <article>Testimonial 1</article>
+                        <article>Testimonial 2</article>
+                        <article>Testimonial 3</article>
+                    </div>
+				</div>
+			</section>
+
+            <!-- Contact section -->
+			<section>
+				<div>
+                    <header>
+                        <h2>Contact</h2>
+                        <p>We like to know new people</p>
+                    </header>
+					<div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                    </article>
-                    <article>
-                        <p>Digital Life</p>
-                        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-                    </article>
-                    <article>
-                        <p>Social</p>
-                        <h3>Bestiarum vero nullum iudicium puto.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-                    </article>
-                </div>
-            </section>
-        </div>
+                    </div>
+				</div>
+			</section>
+		</main>
 
-        <!-- Testimonials section -->
-        <br><!-- Testimonials section -->
-        <div>
-            <section>
-                <h2>Testimonials</h2>
-                <p>We are more than a digital company</p>
-                <div>
-                    <article>Testimonial 1</article>
-                    <article>Testimonial 2</article>
-                    <article>Testimonial 3</article>
-                </div>
-            </section>
-        </div>
-
-        <!-- Contact section -->
-        <br><!-- Contact section -->
-        <div>
-            <section>
-                <h2>Contact</h2>
-                <p>We like to know new people</p>
-                <div>
-                    <!-- Contact content -->
-                </div>
-            </section>
-        </div>
-
-    </main>
-
-    <!-- Footer to help with scanning your code -->
-    <br><!-- Footer -->
-    <footer>
-        Footer
-    </footer>
-
-</body>
-
+        <!-- Footer -->
+		<footer><div>Footer</div></footer>
+	</body>
 </html>
