21. Add social media links

--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -66,10 +66,6 @@
             color: #fff;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
         }
 
         footer a {
@@ -217,9 +213,11 @@
     <!-- Footer to help with scanning your code -->
     <br><!-- Footer -->
     <footer>
-        <a href="https://www.facebook.com/HolbertonSchool/" target="_blank">Facebook</a>
-        <a href="https://twitter.com/holbertonschool" target="_blank">Twitter</a>
-        <a href="https://www.instagram.com/holbertonschool/" target="_blank">Instagram</a>
+        <div>
+            <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+            <a href="https://twitter.com/holbertonschool">Twitter</a>
+            <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+        </div>
     </footer>
 
 </body>
