--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -1,63 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Styleguide - Techium</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Style Guide - Techium</title>
+    <style>
+        /* Your CSS styles can go here */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+        }
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        section {
+            margin-bottom: 20px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <!-- Header content -->
-  </header>
+    <header>
+        <h1>Style Guide</h1>
+    </header>
 
-  <main>
-    <!-- Previous content -->
+    <main>
+        <section id="headings">
+            <h2>Headings</h2>
+            <h1>Heading 1</h1>
+            <h2>Heading 2</h2>
+            <h3>Heading 3</h3>
+        </section>
 
-    <!-- Lists section -->
-    <!-- Comment for Lists -->
-    <!-- New section for Lists -->
-    <section>
-      <header>
-        <h2>Lists</h2>
-      </header>
-      <div>
-        <h3>Unordered</h3>
-        <ul>
-          <li>Dolor pulvinar etiam magna etiam.</li>
-          <li>Sagittis adipiscing lorem eleifend.</li>
-          <li>Felis enim feugiat dolore viverra.</li>
-        </ul>
+        <section id="paragraphs">
+            <header>
+                <h2>Paragraph</h2>
+            </header>
+            <h2>Heading with a subtitle</h2>
+            <p>This is my subtitle</p>
+            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+        </section>
 
-        <h3>Ordered</h3>
-        <ol>
-          <li>Dolor pulvinar etiam magna etiam.</li>
-          <li>Sagittis adipiscing lorem eleifend.</li>
-          <li>Felis enim feugiat dolore viverra.</li>
-        </ol>
+        <!-- Lists section -->
+        <br><!-- Lists section -->
+        <div>
+            <section>
+                <h2>Lists</h2>
+                <!-- Unordered List -->
+                <div>
+                    <h3>Unordered</h3>
+                    <ul>
+                        <li>Dolor pulvinar etiam magna etiam.</li>
+                        <li>Sagittis adipiscing lorem eleifend.</li>
+                        <li>Felis enim feugiat dolore viverra.</li>
+                    </ul>
+                </div>
+                <!-- Ordered List -->
+                <div>
+                    <h3>Ordered</h3>
+                    <ol>
+                        <li>Dolor pulvinar etiam magna etiam.</li>
+                        <li>Sagittis adipiscing lorem eleifend.</li>
+                        <li>Felis enim feugiat dolore viverra.</li>
+                    </ol>
+                </div>
+                <!-- Definition List -->
+                <div>
+                    <h3>Definition</h3>
+                    <dl>
+                        <dt>Term: Definition List title</dt>
+                        <dd>Definition: Definition text.</dd>
+                        <dt>Term: Startup</dt>
+                        <dd>Definition: A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                        <dt>Term: Water</dt>
+                        <dd>Definition: A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                    </dl>
+                </div>
+            </section>
+        </div>
 
-        <h3>Definition</h3>
-        <dl>
-          <dt>Term</dt>
-          <dd>Definition List title</dd>
-          <dt>Definition</dt>
-          <dd>Definition text.</dd>
+    </main>
 
-          <dt>Term</dt>
-          <dd>Startup</dd>
-          <dt>Definition</dt>
-          <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
-
-          <dt>Term</dt>
-          <dd>Water</dd>
-          <dt>Definition</dt>
-          <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
-        </dl>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <!-- Footer content -->
-  </footer>
+    <footer>
+        <p>&copy; 2024 Techium. All rights reserved.</p>
+    </footer>
 </body>
 </html>
